1999-06-03  Adam Fedor  <fedor@gnu.org>

	* ctool.make: New file for making C tools.
	* GNUmakefile.in: Install it.
	* whichlib.pl.in: Bug fixes.
	* GNUstep.csh.in: Fix up PATHPREFIX expansion 
	(patches and files from from Helge Hess <hh@mdlink.de>)

	* GNustep.sh.in: Insert GNUstep path before PATH.

1999-06-01  Adam Fedor  <fedor@gnu.org>

	* executable.template.in: New file to be used as shell script
	application/tool starter.
	* configure.in: Configure it.
	* GNUmakefile.in: Install it.
	* GNUstep.sh.in: Use simpler path and add GNUSTEP_PATHPREFIX_LIST
	* GNUstep.csh.in: Likewise.
	* openapp.in: Use GNUSTEP_PATHPREFIX_LIST and simpler path search
	* debugapp.in: Likewise.
	* application.make: Copy it to main app directory (using app name).
	* tool.make: Install it to main Tool directory when installing.

Fri May 28  6:10:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* application.make: Incorporate appnameInfo.plist into the Info.plist
	if it exists.

Wed May 19 10:20:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* rules.make: Add APPLICATION_ICON
	* application.make: Use APPLICATION_ICON to add icon name to plist

1999-04-27  Adam Fedor  <fedor@gnu.org>

	* congif.site (includedir): Put include files in Headers, not in
	OS/CPU specific dir.

1999-04-22  Adam Fedor  <fedor@gnu.org>

	* GNUstep.csh.in: Don't define LIBRARY_COMBO if already set.
	* GNUstep.sh.in: Likewise.

	* configure.in: Check to see if -lz is needed by -ltiff.

	* target.make (SHARED_CFLAGS): Use +z on HP when CC=cc

Wed Apr  7 21:35:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* brain.make: Add extension X lib for xgps.

1999-04-01  Adam Fedor  <fedor@gnu.org>

	* configure.in: Handle cross-platform compilation better by
	finding programs with proper prefix for target.
	Look for extra X libs needed by dps.
	* config.make.in (X_PRE_LIBS): Define extra X libs
	* brain.make: Use them.
