@@ -1,3 +1,7 @@
+Fri Jun 11 17:23:59 1999  Adam Fedor  <fedor@ultra.doc.com>
+
+	* executable.template.in: Fixes to work on Solaris
+
 1999-06-03  Adam Fedor  <fedor@gnu.org>
 
 	* ctool.make: New file for making C tools.
